--- a/emp_app/templates/emp_app/index.html
+++ b/emp_app/templates/emp_app/index.html
@@ -5,23 +5,43 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div>
-        <h1>This is Emp form.</h1>
-        <form action="javascript:void(0)" method="post">
-            {{emp_form.as_p}}
-        <input type="submit" value="Employee Create">
-        </form><hr>
+    <div class="row">
+        <div class="col-md-5">
+            <h1>This is Off form.</h1>
+            <form action="javascript:void(0)" method="post" id='off'>
+                {{off_form.as_p}}
+                <input type="submit" value="Office Create"> <hr>
+            </form>
+        </div>
+
+        <div class="col-md-7">
+            <h1>This is Emp form.</h1>
+            <form action="javascript:void(0)" method="post" id='emp'>
+                {{emp_form.as_p}}
+            <input type="submit" value="Employee Create">
+            </form><hr>
+        </div>
     </div>
-    
-    <div>
-        <h1>This is Off form.</h1>
-        <form action="javascript:void(0)" method="post">
-            {{off_form.as_p}}
-            <input type="submit" value="Office Create">
-        </form>
-    </div>
-        
+
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js" integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<script>
+
+    $('#off').on('submit', (e)=>{
+        e.preventDefault();
+        alert('off')
+    });
+
+    $('#emp').on('submit', (e)=>{
+        e.preventDefault();
+        alert('emp')
+    });
+
+</script>
